update to Makefile and some references

--- a/docs/ml.bib
+++ b/docs/ml.bib
@@ -1069,3 +1069,58 @@ Title = {Automatic Debiased Machine Learning of Causal and Structural Effects},
 Year = {2018},
 Eprint = {arXiv:1809.05224},
 }
+
+@article{yang2020,
+title = {Double machine learning with gradient boosting and its application to the Big N audit quality effect},
+journal = {Journal of Econometrics},
+volume = {216},
+number = {1},
+pages = {268-283},
+year = {2020},
+note = {Annals Issue in honor of George Tiao: Statistical Learning for Dependent Data},
+issn = {0304-4076},
+doi = {https://doi.org/10.1016/j.jeconom.2020.01.018},
+url = {https://www.sciencedirect.com/science/article/pii/S0304407620300245},
+author = {Jui-Chung Yang and Hui-Ching Chuang and Chung-Ming Kuan},
+keywords = {Audit quality, Average treatment effect, Big N effect, Double machine learning, Gradient boosting, Performance-matched discretionary accruals},
+abstract = {In this paper, we study the double machine learning (DML) approach of Chernozhukov et al. (2018) for estimating average treatment effect and apply this approach to examine the Big N audit quality effect in the accounting literature. This approach relies on machine learning methods and is suitable when a high dimensional nuisance function with many covariates is present in the model. This approach does not suffer from the “regularization bias” when a learning method with a proper convergence rate is used. We demonstrate by simulations that, for the DML approach, the gradient boosting method is fairly robust and to be preferred to other methods, such as regression tree, random forest, support vector regression machine, and the conventional Nadaraya–Watson nonparametric estimator. We then apply the DML approach with gradient boosting to estimate the Big N effect. We find that Big N auditors have a positive effect on audit quality and that this effect is not only statistically significant but also economically important. We further show that, in contrast to the results of propensity score matching, our estimates of said effect are quite robust to the hyper-parameters in the gradient boosting algorithm.}
+}
+
+@article{yue2022,
+author = {Mu Yue and Jialiang Li and Baoluo Sun},
+title = {Conditional sparse boosting for high-dimensional instrumental variable estimation},
+journal = {Journal of Statistical Computation and Simulation},
+volume = {92},
+number = {15},
+pages = {3087-3108},
+year  = {2022},
+publisher = {Taylor & Francis},
+doi = {10.1080/00949655.2022.2056739},
+
+URL = { 
+        https://doi.org/10.1080/00949655.2022.2056739    
+},
+eprint = { 
+        https://doi.org/10.1080/00949655.2022.2056739   
+}
+}
+
+@inproceedings{bakhitov2022,
+author = {Bakhitov, Edvard and Singh, Amandeep},
+title = {Causal Gradient Boosting: Boosted Instrumental Variable Regression},
+year = {2022},
+isbn = {9781450391504},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3490486.3538251},
+doi = {10.1145/3490486.3538251},
+abstract = {Recent advances in the literature have demonstrated that standard supervised learning algorithms are ill-suited for problems with endogenous explanatory variables. To correct for this, many variants of nonparameteric instrumental variable regression methods have been developed. In this paper, we propose an alternative algorithm called boostIV that builds on the traditional gradient boosting algorithm and corrects for the endogeneity bias. The algorithm is very intuitive and resembles an iterative version of the standard 2SLS estimator. The proposed estimator is data driven and does not require any functional form approximation assumptions besides specifying a weak learner. We demonstrate that our estimator is consistent under mild conditions. We carry out extensive Monte Carlo simulations to demonstrate the finite sample performance of our algorithm compared to other recently developed methods. We show that boostIV is at worst on par with the existing methods and on average significantly outperforms them.},
+booktitle = {Proceedings of the 23rd ACM Conference on Economics and Computation},
+pages = {604–605},
+numpages = {2},
+keywords = {gradient descent, boosting, instrumental variables, non-parametric, causal learning},
+location = {Boulder, CO, USA},
+series = {EC '22}
+}
+
+  
